updated recipe controller
