# routes/exerciseListr.js
@@ -1,7 +1,6 @@
 const express =require('express');
 const router = express.Router();
 const auth = require('../middlewares/auth');
-const multer  = require('multer')
 
 const exerciseListController= require('../controllers/exerciseList-controller');
 
@@ -10,7 +9,6 @@ router.put('/put-exercise/:id',auth,exerciseListController.putExerciseList);
 router.get('/get-exercise',auth,exerciseListController.getExerciseList);
 router.delete('/delete-exercise/:id',auth,exerciseListController.deleteExerciseList);
 
-router.post('/post-exercise-from-excel',multer({ storage: exerciseListController.storage }).single("uploadfile"),exerciseListController.excelData2MongoDB)
 
 
 
