# routes/reciper.js
@@ -4,10 +4,13 @@ const multer = require('multer');
 const auth = require('../middlewares/auth');
 
 const {postRecipe,putRecipe,getRecipies,deleteRecipe,storage} = require('../controllers/recipe-controller')
+const {postExcelRecipe} = require('../controllers/recipeExcel-controller')
 
 router.get('/getrecipies',auth,getRecipies);
 router.post('/postrecipe', auth ,multer({storage:storage}).array('recipeImage'),postRecipe);
 router.put('/putrecipe/:id', auth ,multer({storage:storage}).array('recipeImage'),putRecipe);
 router.delete('/deleterecipe/:id',auth,deleteRecipe);
+
+router.post('/postexcelrecipe',postExcelRecipe);
 
 module.exports = router;
